--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -23,7 +23,7 @@
 	width: 8px;
 	height: 8px; 
 	background: #4CAF50;
-	// margin-right: 20px;
+	margin-right: 5px;
 }
 
 #online-navbar  {
@@ -44,7 +44,7 @@
 	width: 8px;
 	height: 8px; 
 	background: rgba(0, 0, 0, 0.38);
-	//margin-right: 20px;
+	margin-right: 5px;
 }
 
 .homepage {
